tests/transpiler/x/go/in_operator.error
exit status 1
# command-line-arguments
../../../tests/transpiler/x/go/in_operator.go:12:80: syntax error: function type must have no type parameters
../../../tests/transpiler/x/go/in_operator.go:20:81: syntax error: function type must have no type parameters
