tests/transpiler/x/go/in_operator.go
//go:build ignore

// Generated by Mochi v0.10.31 on 2025-07-20 09:08:15 GMT+7
package main

import (
    "fmt"
)

func main() {
    var xs []int = []int{1, 2, 3}
    fmt.Println(func(v any) any { if v == nil { return "nil" }; return v }(func[T comparable](list []T, v T) bool {
    for _, x := range list {
        if x == v {
            return true
        }
    }
    return false
}(xs, 2)))
    fmt.Println(func(v any) any { if v == nil { return "nil" }; return v }(!func[T comparable](list []T, v T) bool {
    for _, x := range list {
        if x == v {
            return true
        }
    }
    return false
}(xs, 5)))
}
